@@ -14,7 +14,7 @@ class PaymillTest < Test::Unit::TestCase
     assert response = @gateway.purchase(@amount, @credit_card)
     assert_success response
     assert_equal "tran_c94ba7df2dae8fd55028df41173c;", response.authorization
-    assert_equal "Transaction approved", response.message
+    assert_equal "General success response.", response.message
     assert_equal 20000, response.params['data']['response_code']
     assert_equal 'pay_b8e6a28fc5e5e1601cdbefbaeb8a', response.params['data']['payment']['id']
     assert_equal '5100', response.params['data']['payment']['last4']
@@ -23,12 +23,20 @@ class PaymillTest < Test::Unit::TestCase
     assert response.test?
   end
 
-  def test_failed_purchase_with_invalid_credit_card
+  def test_failed_store_card_attempting_purchase
     @gateway.expects(:raw_ssl_request).returns(failed_store_response)
     response = @gateway.purchase(@amount, @credit_card)
     assert_failure response
     assert_equal 'Account or Bank Details Incorrect', response.message
     assert_equal '000.100.201', response.params['transaction']['processing']['return']['code']
+  end
+
+  def test_failed_purchase
+    @gateway.stubs(:raw_ssl_request).returns(successful_store_response, failed_purchase_response)
+    response = @gateway.purchase(@amount, @credit_card)
+    assert_failure response
+    assert_equal 'Card declined by authorization system.', response.message
+    assert_equal 50102, response.params['data']['response_code']
   end
 
   def test_invalid_login
@@ -52,10 +60,10 @@ class PaymillTest < Test::Unit::TestCase
     assert_success response
     assert response.test?
 
-    assert_equal "tran_50fb13e10636cf1e59e13018d100;preauth_57c0c87ae3d193f66dc8", response.authorization
-    assert_equal "Transaction approved", response.message
-    assert_equal '5100', response.params['data']['payment']['last4']
-    assert_equal 10001, response.params['data']['response_code']
+    assert_equal "tran_4c612d5293e26d56d986eb89648c;preauth_fdf916cab73b97c4a139", response.authorization
+    assert_equal "General success response.", response.message
+    assert_equal '0004', response.params['data']['payment']['last4']
+    assert_equal 20000, response.params['data']['response_code']
     assert_nil response.avs_result["message"]
     assert_nil response.cvv_result["message"]
 
@@ -64,7 +72,15 @@ class PaymillTest < Test::Unit::TestCase
     assert_success response
     assert response.test?
     assert_equal 20000, response.params['data']['response_code']
-    assert_equal "Transaction approved", response.message
+    assert_equal "General success response.", response.message
+  end
+
+  def test_failed_authorize
+    @gateway.stubs(:raw_ssl_request).returns(successful_store_response, failed_authorize_response)
+    response = @gateway.authorize(@amount, @credit_card)
+    assert_failure response
+    assert_equal 'Card declined by authorization system.', response.message
+    assert_equal 50102, response.params['data']['response_code']
   end
 
   def test_successful_authorize_and_void
@@ -77,7 +93,7 @@ class PaymillTest < Test::Unit::TestCase
     response = @gateway.void(response.authorization)
     assert_success response
     assert response.test?
-    assert_equal "Transaction approved", response.message
+    assert_equal "Transaction approved.", response.message
   end
 
   def test_failed_capture
@@ -101,7 +117,7 @@ class PaymillTest < Test::Unit::TestCase
     assert_success refund
     assert response.test?
 
-    assert_equal 'Transaction approved', refund.message
+    assert_equal 'General success response.', refund.message
     assert_equal 'tran_89c8728e94273510afa99ab64e45', refund.params['data']['transaction']['id']
     assert_equal 'refund_d02807f46181c0919016;', refund.authorization
     assert_equal 20000, refund.params['data']['response_code']
@@ -142,7 +158,7 @@ class PaymillTest < Test::Unit::TestCase
     assert response = @gateway.purchase(@amount, "token")
     assert_success response
     assert_equal "tran_c94ba7df2dae8fd55028df41173c;", response.authorization
-    assert_equal "Transaction approved", response.message
+    assert_equal "General success response.", response.message
     assert_equal 20000, response.params['data']['response_code']
     assert_equal 'pay_b8e6a28fc5e5e1601cdbefbaeb8a', response.params['data']['payment']['id']
     assert_equal '5100', response.params['data']['payment']['last4']
@@ -158,10 +174,10 @@ class PaymillTest < Test::Unit::TestCase
     assert_success response
     assert response.test?
 
-    assert_equal "tran_50fb13e10636cf1e59e13018d100;preauth_57c0c87ae3d193f66dc8", response.authorization
-    assert_equal "Transaction approved", response.message
-    assert_equal '5100', response.params['data']['payment']['last4']
-    assert_equal 10001, response.params['data']['response_code']
+    assert_equal "tran_4c612d5293e26d56d986eb89648c;preauth_fdf916cab73b97c4a139", response.authorization
+    assert_equal "General success response.", response.message
+    assert_equal '0004', response.params['data']['payment']['last4']
+    assert_equal 20000, response.params['data']['response_code']
     assert_nil response.avs_result["message"]
     assert_nil response.cvv_result["message"]
   end
@@ -232,81 +248,244 @@ class PaymillTest < Test::Unit::TestCase
     JSON
   end
 
+  def failed_purchase_response
+    MockResponse.failed <<-JSON
+      {
+        "data":{
+            "id":"tran_a432ce3b113cdd65b48e0d05db88",
+            "amount":"100",
+            "origin_amount":100,
+            "status":"failed",
+            "description":null,
+            "livemode":false,
+            "refunds":null,
+            "currency":"EUR",
+            "created_at":1385054845,
+            "updated_at":1385054845,
+            "response_code":50102,
+            "short_id":null,
+            "is_fraud":false,
+            "invoices":[
+
+            ],
+            "app_id":null,
+            "fees":[
+
+            ],
+            "payment":{
+                "id":"pay_8b75b960574031979a880f98",
+                "type":"creditcard",
+                "client":"client_a69d8452d530ed20b297",
+                "card_type":"mastercard",
+                "country":null,
+                "expire_month":"5",
+                "expire_year":"2020",
+                "card_holder":"",
+                "last4":"5100",
+                "created_at":1385054844,
+                "updated_at":1385054845,
+                "app_id":null
+            },
+            "client":{
+                "id":"client_a69d8452d530ed20b297",
+                "email":null,
+                "description":null,
+                "created_at":1385054845,
+                "updated_at":1385054845,
+                "app_id":null,
+                "payment":[
+
+                ],
+                "subscription":null
+            },
+            "preauthorization":null
+        },
+        "mode":"test"
+      }
+    JSON
+  end
+
   def successful_authorize_response
     MockResponse.succeeded <<-JSON
-      { "data":{
-        "id":"tran_50fb13e10636cf1e59e13018d100",
-        "amount":"100",
-        "origin_amount":100,
-        "status":"preauth",
-        "description":null,
-        "livemode":false,
-        "refunds":null,
-        "currency":"EUR",
-        "created_at":1360787311,
-        "updated_at":1360787311,
-        "response_code":10001,
-        "invoices":[
+      {
+        "data":{
+            "id":"tran_4c612d5293e26d56d986eb89648c",
+            "amount":"100",
+            "origin_amount":100,
+            "status":"preauth",
+            "description":null,
+            "livemode":false,
+            "refunds":null,
+            "currency":"EUR",
+            "created_at":1385054035,
+            "updated_at":1385054035,
+            "response_code":20000,
+            "short_id":"7357.7357.7357",
+            "is_fraud":false,
+            "invoices":[
 
-        ],
-        "payment":{
-          "id":"pay_58e0662ef367027b2356f263e5aa",
-          "type":"creditcard",
-          "client":"client_9e4b7b0d61adc9a9e64e",
-          "card_type":"mastercard",
-          "country":null,
-          "expire_month":9,
-          "expire_year":2014,
-          "card_holder":null,
-          "last4":"5100",
-          "created_at":1360787310,
-          "updated_at":1360787311
+            ],
+            "app_id":null,
+            "fees":[
+
+            ],
+            "payment":{
+                "id":"pay_f9ff269434185e0789106758",
+                "type":"creditcard",
+                "client":"client_d5179e1b6a8f596b19b9",
+                "card_type":"mastercard",
+                "country":null,
+                "expire_month":"9",
+                "expire_year":"2014",
+                "card_holder":"",
+                "last4":"0004",
+                "created_at":1385054033,
+                "updated_at":1385054035,
+                "app_id":null
+            },
+            "client":{
+                "id":"client_d5179e1b6a8f596b19b9",
+                "email":null,
+                "description":null,
+                "created_at":1385054035,
+                "updated_at":1385054035,
+                "app_id":null,
+                "payment":[
+
+                ],
+                "subscription":null
+            },
+            "preauthorization":{
+                "id":"preauth_fdf916cab73b97c4a139",
+                "amount":"100",
+                "currency":"EUR",
+                "status":"closed",
+                "livemode":false,
+                "created_at":1385054035,
+                "updated_at":1385054035,
+                "app_id":null,
+                "payment":{
+                    "id":"pay_f9ff269434185e0789106758",
+                    "type":"creditcard",
+                    "client":"client_d5179e1b6a8f596b19b9",
+                    "card_type":"mastercard",
+                    "country":null,
+                    "expire_month":"9",
+                    "expire_year":"2014",
+                    "card_holder":"",
+                    "last4":"0004",
+                    "created_at":1385054033,
+                    "updated_at":1385054035,
+                    "app_id":null
+                },
+                "client":{
+                    "id":"client_d5179e1b6a8f596b19b9",
+                    "email":null,
+                    "description":null,
+                    "created_at":1385054035,
+                    "updated_at":1385054035,
+                    "app_id":null,
+                    "payment":[
+
+                    ],
+                    "subscription":null
+                }
+            }
         },
-        "client":{
-          "id":"client_9e4b7b0d61adc9a9e64e",
-          "email":null,
+        "mode":"test"
+      }
+    JSON
+  end
+
+  # Paymill returns an HTTP Status code of 200 for an auth failure.
+  def failed_authorize_response
+    MockResponse.succeeded <<-JSON
+      {
+        "data":{
+          "id":"tran_e53189278c7250bfa15c9c580ff2",
+          "amount":"100",
+          "origin_amount":100,
+          "status":"failed",
           "description":null,
-          "created_at":1360787311,
-          "updated_at":1360787311,
-          "payment":[
+          "livemode":false,
+          "refunds":null,
+          "currency":"EUR",
+          "created_at":1385054501,
+          "updated_at":1385054501,
+          "response_code":50102,
+          "short_id":null,
+          "is_fraud":false,
+          "invoices":[
 
           ],
-          "subscription":null
-        },
-        "preauthorization":{
-          "id":"preauth_57c0c87ae3d193f66dc8",
-          "amount":"100",
-          "status":"closed",
-          "livemode":false,
-          "created_at":1360787311,
-          "updated_at":1360787311,
+          "app_id":null,
+          "fees":[
+
+          ],
           "payment":{
-            "id":"pay_58e0662ef367027b2356f263e5aa",
+            "id":"pay_7bc2d73764f38040df934995",
             "type":"creditcard",
-            "client":"client_9e4b7b0d61adc9a9e64e",
+            "client":"client_531e6247ff900e734884",
             "card_type":"mastercard",
             "country":null,
-            "expire_month":9,
-            "expire_year":2014,
-            "card_holder":null,
+            "expire_month":"5",
+            "expire_year":"2020",
+            "card_holder":"",
             "last4":"5100",
-            "created_at":1360787310,
-            "updated_at":1360787311
-          },
-          "client":{
-            "id":"client_9e4b7b0d61adc9a9e64e",
+            "created_at":1385054500,
+            "updated_at":1385054501,
+            "app_id":null
+        },
+        "client":{
+            "id":"client_531e6247ff900e734884",
             "email":null,
             "description":null,
-            "created_at":1360787311,
-            "updated_at":1360787311,
+            "created_at":1385054501,
+            "updated_at":1385054501,
+            "app_id":null,
             "payment":[
 
             ],
             "subscription":null
+        },
+        "preauthorization":{
+            "id":"preauth_cfa6a29b4c679efee58b",
+            "amount":"100",
+            "currency":"EUR",
+            "status":"failed",
+            "livemode":false,
+            "created_at":1385054501,
+            "updated_at":1385054501,
+            "app_id":null,
+            "payment":{
+                "id":"pay_7bc2d73764f38040df934995",
+                "type":"creditcard",
+                "client":"client_531e6247ff900e734884",
+                "card_type":"mastercard",
+                "country":null,
+                "expire_month":"5",
+                "expire_year":"2020",
+                "card_holder":"",
+                "last4":"5100",
+                "created_at":1385054500,
+                "updated_at":1385054501,
+                "app_id":null
+            },
+            "client":{
+                "id":"client_531e6247ff900e734884",
+                "email":null,
+                "description":null,
+                "created_at":1385054501,
+                "updated_at":1385054501,
+                "app_id":null,
+                "payment":[
+
+                ],
+                "subscription":null
+              }
           }
-        }
-      },
-      "mode":"test"
+        },
+        "mode":"test"
       }
     JSON
   end
