@@ -3,6 +3,7 @@
 * Balanced: Add support for appears_on_statement_as [duff]
 * Authorize.Net: Make already actioned responses failures [odorcicd]
 * Add Payex gateway [atomgiant]
+* Paymill: Fix authorizations [duff]
 
 == Version 1.42.2 (November 13th, 2013)
 
